# PreProcessing

./: .gitignore  CLEANUP_SUMMARY.md  GIRL_FINAL_SUMMARY.md  GIRL_INTEGRATION.md  GIRL_QUICK_START.md  GIRL_VERIFICATION_REPORT.md  README.md  REFACTORING_SUMMARY.md  debug_anova.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh  test_anova_debug.py
.github/workflows/: SAR_pytest.yml  pytest.yml  pytest_init.yml
.venv_sys/: pyvenv.cfg
docs/: COMPLETE_REFERENCE.md  DEVELOPMENT.md  FLAG_COMBINATIONS.txt  INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  START_HERE.md
example/: id_matching.csv  statsbomb_skillcorner.py
example/dataset/: metrica_away.csv  metrica_home.csv  play_fake.csv  player_fake.csv  tracking_1stHalf_fake.csv  tracking_2ndHalf_fake.csv
feature_pipeline/: __init__.py  run_feature_pipeline.py
feature_pipeline/explainability/: __init__.py  shap_analysis.py
feature_pipeline/ml/: __init__.py  model_comparison.py  model_evaluation.py
feature_pipeline/stats/: __init__.py  descriptive_stats.py  outlier_analysis.py  two_way_anova.py
feature_pipeline/utils/: __init__.py  data_loader.py  plotting.py
girl_pipeline/: README.md  __init__.py  data_loader.py  run_girl_pipeline.py
preprocessing/: __init__.py  config.py  data_reorganization.py  event_tracking_sync.py  feature_computation.py  feature_engineering.py  main.py  preprocessing.py  reward_features.py  sar_preprocessing.py  transition_analysis.py
scripts/: RUN_PIPELINE.sh
tests/: __init__.py  test_config.py  test_feature_engineering.py
(+112 files in other folders)
