# preprocessing/pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openstarlab_preprocessing"
version = "0.1.19"
description = "openstarlab preprocessing package"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Calvin Yeung", email="yeung.chikwong@g.sp.m.is.nagoya-u.ac.jp" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "statsbombpy>=0.0.1",
    "matplotlib>=3.7.5",
    "tqdm",
    "chardet>=5.2.0",
    "jsonlines>=4.0.0",
    "bidict>=0.23.1",
    "scipy>=1.10.1",
    "torch>=2.5.1",
    "pydantic>=2.10.3",
    "pytango>=9.4.1",
    "ai2-tango>=0.12.0",
    "shapely>=2.0.6",
    "opencv-python>=4.10.0.84",
    "bidict>=0.23.1",
    "jsonlines>=4.0.0",
    "torch>=2.4.0"
]

license = { text = "Apache License 2.0" }

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.workspace]
members = ["uv-open-starlab-SARpreprocess"]

[project.urls]
Homepage = "https://github.com/open-starlab/PreProcessing"
